tests/fixtures/invalid/chr_dict.py
# Cannot call chr() with Dict[str, int]
x = chr({"a": 1})
